# prealgebra-sdk

./: .gitignore  CMakeLists.txt  README.md
include/: BasicIntegerArithmetic.hpp  BasicNumberAddition.hpp  BasicNumberSimplifier.hpp  BasicNumberTranslator.hpp  Decimal.hpp  Fraction.hpp  INumberAddition.hpp  INumberSimplifier.hpp  INumberTranslator.hpp  Integer.hpp  MixedNumber.hpp  Number.hpp  Translator.hpp
include/concrete/: BasicFractionArithmetic.hpp  BasicFractionSimplification.hpp  BasicIntegerArithmetic.hpp  DefaultDecimalRepresentation.hpp  DefaultDecimalTranslator.hpp  DefaultFractionArithmetic.hpp  DefaultFractionSimplification.hpp  DefaultFractionTranslator.hpp  DefaultIntegerArithmetic.hpp  DefaultIntegerTranslator.hpp  FractionDecimalArithmetic.hpp  FractionNumberArithmetic.hpp  LongDivisionFractionToDecimalTranslator.hpp  PrimeFactorIntegerProperties.hpp  PrimeFractionSimplification.hpp  RegexDecimalStringParser.hpp
include/factory/: IDecimalFactory.hpp  IDefaultDecimalRepresentationFactory.hpp  IFractionFactory.hpp  IFractionTranslatorFactory.hpp  IIntegerFactory.hpp  ITranslatoryFactory.hpp  IntegerPropertiesFactory.hpp  NumberArithmeticFactory.hpp
include/utility/: IIntegerProperties.hpp
src/: BasicNumberAddition.cpp  BasicNumberSimplifier.cpp  BasicNumberTranslator.cpp  Decimal.cpp  DefaultDecimalRepresentation.cpp  DefaultFractionTranslator.cpp  Fraction.cpp  Integer.cpp  MixedNumber.cpp  Number.cpp  Translator.cpp
test/: BasicFractionSimplificationTest.cpp  DecimalTest.cpp  DefaultFractionSimplificationTest.cpp  FractionTest.cpp  INumberAdditionTest.cpp  INumberSimplifierTest.cpp  INumberTranslatorTest.cpp  IntegerTest.cpp  NegativeNumberTest.cpp  PrimeFractionSimplificationTest.cpp  RegexDecimalStringParserTest.cpp  TranslatorTest.cpp
